Bio was extending too widely on mobile, testing fix. Also dropdown improvements!

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -44,6 +44,24 @@
    	color: rgba(109, 149, 59, 1.0);
 }
 
+.background-dimmer {
+	z-index: 2;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	opacity: 0.0;
+	transition: 0.3s;
+}
+
+.background-dimmer.dimmed-out {
+	display: block;
+	opacity: 0.8;
+	transition: 0.3s;
+}
+
 .navbar-nav {
 	display: flex;
 	justify-content: flex-start;
@@ -55,6 +73,19 @@
 	margin-left: 10px;
 	margin-right: 30px;
 	font-family: 'ABeeZee';
+}
+
+@media screen and (max-width: 767px) {
+	#nav-links-div {
+		font-size: 40px;
+	}
+
+	#nav-bar-ul {
+		align-items: flex-start;
+	}
+	.nav-link {
+		color: white !important;
+	}
 }
 
 #nav-links-div a {
@@ -217,6 +248,13 @@ p {
 	display: flex;
 	padding: 30px;
 	padding-right: 30px;
+}
+
+
+@media screen and (max-width: 767px) {
+	#bio-container {
+		flex-direction: column;
+	}
 }
 
 #bio-container img {
